# cmakelist_v1

./: README.md
more_sub_v1/: CMakeLists.txt  CMakeLists_1最简单直接文件引用.txt  CMakeLists_2编译成库调用.txt  main.cpp
more_sub_v1/folder1/: A.h  CMakeLists.txt
more_sub_v1/folder2/: B.cpp  CMakeLists.txt
more_sub_v2/: CMakeLists.txt
more_sub_v2/folder1/: A.cpp  A.h  CMakeLists.txt
more_sub_v2/folder2/: B.h  CMakeLists.txt
more_sub_v2/folder3/: C.cpp  CMakeLists.txt
